--- a/hra/index.html
+++ b/hra/index.html
@@ -9,5 +9,6 @@
     <script src="p5.js"></script>
     <script src="input.js"></script>
     <script src="sketch.js"></script>
+    <script src="enemy.js"></script>
 </body>
 </html>
