--- a/hra/index.html
+++ b/hra/index.html
@@ -10,5 +10,6 @@
     <script src="input.js"></script>
     <script src="sketch.js"></script>
     <script src="enemy.js"></script>
+    <script src="bullet.js"></script>
 </body>
 </html>
