--- a/engine3/index.html
+++ b/engine3/index.html
@@ -12,7 +12,10 @@
     <script src="src/lib/ts/input.js"></script>
     <script src="src/lib/ts/drawing.js"></script>
     <script src="src/lib/ts/rendering.js"></script>
+    <script src="src/platform.js"></script>
     <script src="src/lib/ts/physics.js"></script>
     <script src="src/main.js"></script>
+    <script src="src/player.js"></script>
+
 </body>
 </html>
